# ReCombinator

./: .gitignore  LICENSE  README.md  hn_briefing.py  hn_briefing.xml  hn_briefing_latest.xml  hn_briefing_rss.py  hn_briefing_test.xml  pyproject.toml
recombinator/: __init__.py  article.py  cli.py  hn.py  http.py  models.py  pipeline.py  report.py  summarizer.py  text.py
tests/: test_article.py  test_hn.py  test_rss.py  test_summarizer.py
