[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recombinator"
version = "0.1.0"
description = "Create brief Hacker News front-page technology summaries."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
recombinator = "recombinator.cli:main"

[tool.setuptools.packages.find]
include = ["recombinator*"]

